<html loads current score as 0 when game loads and you haven't pressed a jewel. Also added to the wins/losses board a <li> that states whether you won or lost your last game.>

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
             <div class="col-md-4" id="wins-losses">
                 <ul>
+                    <li id="winorlose"></li>
                     <li id="wins"></li>
                     <li id="losses"></li>
                 </ul>
@@ -57,7 +58,7 @@
         <div class="row">
             <div class="col-md-4" id="current-score">
                 <p>Your total score is:</p>
-                <div id="total-score"></div>
+                <div id="total-score">0</div>
             </div>
         </div>
 
